@@ -5,7 +5,7 @@
 # language and the Python representation of the configuration
 # description that is used by the Data Management tools.
 #
-# $Id: complete.cfg,v 1.2 2005/09/06 16:51:58 paterno Exp $
+# $Id: complete.cfg,v 1.3 2005/09/28 04:33:30 wmtan Exp $
 #
 #------------------------------------------------------------
 
@@ -49,9 +49,9 @@ process PROCESSNAME =
   module a = AProducer
   {
     int32 a = 32
-    vdouble b = ( 1.1, 2.2 )
-    vstring c = ( )            # empty vectors are accepted
-    vstring d = ( 'boo', "yah" )
+    vdouble b = { 1.1, 2.2 }
+    vstring c = { }            # empty vectors are accepted
+    vstring d = { 'boo', "yah" }
   }
 
   module b = BProducer
@@ -86,7 +86,7 @@ process PROCESSNAME =
   path p1 = { (a&b), c }
   path p2 = { s1, (s3&s2) }
   
-  endpath = { y,  z }
+  endpath a = { y,  z }
 
 }
 
